--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "npx prisma db seed"
   },
   "prisma": {
     "seed": "npx ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -14,11 +15,19 @@
   "dependencies": {
     "@mantine/core": "^7.10.2",
     "@mantine/hooks": "^7.10.2",
+    "@mantine/notifications": "^7.10.2",
     "@prisma/client": "^5.15.1",
+    "@types/crypto-js": "^4.2.2",
+    "@types/lodash": "^4.17.5",
+    "crypto-js": "^4.2.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "next": "14.2.4",
     "next-dev": "^1.2.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "react-simple-toasts": "^5.10.0"
   },
   "devDependencies": {
     "@types/node": "^20",
